# 4DCT

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  train_spbf.py
configs/: SPBFconfig.yaml
data/: dataset.py  test.py
models/: SPBF.py
utils/: dicom2nii.py  generate_gif.py  generate_noise_scans.py  noise.py
